k8s/mnist-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mnist-ingress
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: mnist.local
      http:
        paths:
          - path: /train
            pathType: Prefix
            backend:
              service:
                name: mnist-train-svc
                port:
                  number: 80
          - path: /evaluate
            pathType: Prefix
            backend:
              service:
                name: mnist-evaluate-svc
                port:
                  number: 80
          - path: /inference
            pathType: Prefix
            backend:
              service:
                name: mnist-inference-svc
                port:
                  number: 80
